--- a/index.html
+++ b/index.html
@@ -398,36 +398,62 @@ async function handleCredentialResponse(response){
 
 /* ====== Boot ====== */
 (async function(){
-  // inject client id
   const g = document.getElementById("g_id_onload");
   g.setAttribute("data-client_id", GOOGLE_CLIENT_ID);
 
-  showMsg("");
+  const url = new URL(location.href);
+  const wantPortal = url.searchParams.get("portal") === "1";
 
   const saved = (localStorage.getItem(LS_KEY) || "").trim().toLowerCase();
 
-if(saved){
-  showChecking(); // ✅ au lieu de showLogin()
-  try{
-    const res = await authCheck(saved);
-    if(res && res.ok === true){
-      showMsg("");
+  // ✅ Si on revient d’une page (portal=1) et qu’on a une session en local,
+  // on affiche DIRECT le portail (anti "flash login") puis on vérifie derrière.
+  if (wantPortal && saved){
+    showPortal();
+    showMsg("Vérification…");
+
+    try{
+      const res = await authCheck(saved);
+      if(res && res.ok === true){
+        showMsg("");
+        showPortal();
+      }else{
+        localStorage.removeItem(LS_KEY);
+        showLogin();
+        showMsg("Accès refusé.");
+      }
+    }catch(e){
+      // En cas d’erreur réseau, on garde le portail affiché (pas de retour login)
+      // et on met juste un message. (Tu peux choisir l’inverse si tu préfères.)
+      showMsg("Connexion à vérifier (réseau).");
       showPortal();
-    }else{
+    }
+
+    return;
+  }
+
+  // ✅ Cas normal (ou premier accès)
+  if(saved){
+    showMsg("Vérification…");
+    try{
+      const res = await authCheck(saved);
+      if(res && res.ok === true){
+        showMsg("");
+        showPortal();
+      }else{
+        localStorage.removeItem(LS_KEY);
+        showLogin();
+        showMsg("Accès refusé.");
+      }
+    }catch(e){
       localStorage.removeItem(LS_KEY);
       showLogin();
-      showMsg("Accès refusé.");
+      showMsg("Erreur réseau / serveur.");
     }
-  }catch(e){
-    localStorage.removeItem(LS_KEY);
+  }else{
     showLogin();
-    showMsg("Erreur réseau / serveur.");
   }
-}else{
-  showLogin();
-}
-
-});
+})();
 
 
 </script>
